Add count for crime type

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,8 @@ target/
 
 #Virtual environment
 venv
+
+#data files
+WeatherChicago20102016.csv
+Crimes_-_2001_to_present.csv
+crime_chicago_with_timestamp.pkl
